# cowpatch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: build-docs.yml  ci.yml
_modules/: index.html
_modules/cowpatch/: base_elements.html  exceptions.html  layout_elements.html  svg_utils.html  text_elements.html  utils.html  wrappers.html
_sources/autoapi/: index.rst.txt
_sources/examples/: Layout.ipynb.txt  examples_index.rst.txt
_sources/guides/: guides_index.rst.txt
autoapi/: index.html
autoapi/cowpatch/: index.html
docs/: Makefile  conf.py  example.ipynb  getting_started.ipynb  index.md  make.bat
doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  getting_started.doctree  index.doctree
doctrees/autoapi/: index.doctree
doctrees/examples/: Layout.doctree  examples_index.doctree
examples/: Layout.html  Layout2.html  examples_index.html
guides/: Layout.html  guides_index.html
html/: .buildinfo  changelog.html  getting_started.html  index.html  search.html  searchindex.js
html/_sources/: getting_started.ipynb.txt
jupyter_execute/: getting_started.ipynb  getting_started.py
notes/: README.md  Uniquify plot svgs.ipynb  base_svg_construction.md  getting_started.md  inset_mallory.py  motivation.md  proof_of_concept.py  proof_of_concept_combined_svg.py  proof_of_concept_inset.py  proof_of_concept_legend_pull.py  proof_of_concept_png.py  proof_of_concept_svg.py  proof_of_concept_text_svg.py  proof_of_concept_wrapper.py  python-package-development.md  scaling_vs_aspect_ratio.md  strategy.md  svg_display_experiment.ipynb
src/cowpatch/: base.py  (+14 more)
tests/: test_annotation_elements.py  test_base.py  test_base_elements.py  test_cowpatch.py  test_layout.py  test_layout_elements.py  test_svg_utils.py  test_text_elements.py  test_utils.py
(+57 files in other folders)
