[tool.poetry]
name = "cowpatch"
version = "0.1.0"
description = "A package for combining python ggplot visuals"
authors = ["Benjamin LeRoy", "Mallory Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benjaminleroy/cowpatch/"
repository = "https://github.com/benjaminleroy/cowpatch/"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
plotnine = "^0.8.0"
matplotlib = "^3.5.1"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]
pandas = "^1.3.5"
pytest = "^7.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
