[tool.poetry]
name = "cowpatch"
version = "0.1.2"
description = "A package for combining python ggplot visuals"
authors = ["Benjamin LeRoy", "Mallory Wang"]
license = "MIT"
readme = "README.md"
homepage = "https://benjaminleroy.github.io/cowpatch/"
repository = "https://github.com/benjaminleroy/cowpatch/"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
plotnine = "^0.10.0"
matplotlib = "^3.5.1"
numpy = "^1.21.4"
svgutils = "^0.3.4"
CairoSVG = "^2.5.2"
ipython = "^8.0.1"

[tool.poetry.dev-dependencies]
pandas = "^1.3.5"
pytest = "^7.0.0"
pytest-cov = "^3.0.0"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"
pytest-regressions = "^2.3.1"
hypothesis = "^6.36.2"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.1", python = "^3.8"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

